mgmt: replace clear endpoint with logs routes
